--- a/package.json
+++ b/package.json
@@ -11,40 +11,41 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
+    "@hookform/resolvers": "^3.3.0",
+    "@prisma/client": "^5.6.0",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.0.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "lucide-react": "^0.292.0",
-    "recharts": "^2.8.0",
     "axios": "^1.6.0",
-    "react-hook-form": "^7.47.0",
-    "@hookform/resolvers": "^3.3.0",
-    "zod": "^3.22.0",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
-    "framer-motion": "^10.16.0",
-    "react-hot-toast": "^2.4.0",
-    "zustand": "^4.4.0",
-    "prisma": "^5.6.0",
-    "@prisma/client": "^5.6.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.292.0",
     "midtrans-client": "^1.3.0",
-    "xendit-node": "^1.0.0"
+    "next": "^14.0.0",
+    "openai": "^6.7.0",
+    "prisma": "^5.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.0",
+    "recharts": "^2.8.0",
+    "typescript": "^5.0.0",
+    "xendit-node": "^1.0.0",
+    "zod": "^3.22.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.0",
+    "@types/jsonwebtoken": "^9.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "@types/bcryptjs": "^2.4.0",
-    "@types/jsonwebtoken": "^9.0.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   },
   "keywords": [
     "retail",
