--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.292.0",
     "midtrans-client": "^1.3.0",
     "next": "^14.0.0",
+    "next-themes": "^0.4.6",
     "openai": "^6.7.0",
     "prisma": "^5.6.0",
     "react": "^18.2.0",
@@ -41,11 +42,11 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.0",
     "@types/jsonwebtoken": "^9.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.0"
   },
   "keywords": [
     "retail",
