--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "framer-motion": "^10.16.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "midtrans-client": "^1.3.0",
     "next": "^14.0.0",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
+    "pg": "^8.16.3",
     "prisma": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +41,7 @@
     "react-hot-toast": "^2.4.0",
     "recharts": "^2.8.0",
     "typescript": "^5.0.0",
+    "validator": "^13.15.20",
     "xendit-node": "^1.0.0",
     "zod": "^3.22.0",
     "zustand": "^4.4.0"
@@ -58,5 +65,17 @@
     "saas"
   ],
   "author": "QIOS Team",
-  "license": "MIT"
+  "license": "MIT",
+  "directories": {
+    "doc": "docs",
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/theoneandonlyvabo/QIOS.git"
+  },
+  "bugs": {
+    "url": "https://github.com/theoneandonlyvabo/QIOS/issues"
+  },
+  "homepage": "https://github.com/theoneandonlyvabo/QIOS#readme"
 }
