--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
-    "@prisma/client": "^5.6.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
+    "@prisma/client": "^5.22.0",
+    "@types/node": "^20.19.24",
+    "@types/react": "^18.3.26",
     "@types/react-dom": "^18.2.0",
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -34,16 +35,16 @@
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
     "pg": "^8.16.3",
-    "prisma": "^5.6.0",
+    "prisma": "^5.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.0",
     "recharts": "^2.8.0",
-    "typescript": "^5.0.0",
+    "typescript": "^5.9.3",
     "validator": "^13.15.20",
     "xendit-node": "^1.0.0",
-    "zod": "^3.22.0",
+    "zod": "^3.25.76",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
