Electron Chromium App

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# electron
+/dist
+/dist-electron
+*.exe
+*.dmg
+*.AppImage
+*.deb
+*.rpm
